css/custom.css
body {
  /*padding-top: 50px;*/
}
p {
  font-family: 'PT Sans Narrow', sans-serif;
  font-size:17px;
}

a {
  font-family: 'PT Sans Narrow', sans-serif;
  color:#69A6CF;
}

a:hover {
  font-family: 'PT Sans Narrow', sans-serif;
  text-decoration: none;
}

h1 {
  font-family: 'PT Sans Narrow', sans-serif;
  font-weight: bold;
}

h2 {
  font-family: 'PT Sans Narrow', sans-serif;
  font-weight: bold;
}

body,html {
  width: 100%;
  height: 100%;
}


#logo {
  position:absolute;
  top:55%;
  max-width:60%;
  left:50%;
  margin-left:-23%;
  margin-top:-23%;
  display:block; 
}

.container {
}

.container-gallery {
  margin-bottom:70px;
}

ul {
  text-align:left;
  margin-bottom:25px;
  font-family: 'PT Sans Narrow', sans-serif;
  font-size:16px;
}



#title {
  height: 100%;
  width: 100%;
  background-color: #000000;
}

#arrow {
  position:absolute;
  top:90%;
  left:50%;
  max-width:1.5%;
  margin-left:-0.75%;

}


#about {
  background-color: #FFFFFF;
  padding-top:3%;
  padding-bottom:2%;
}

#project {
  background-color: #E9E6E3;
  padding-top:3%;
  padding-bottom:2%;
}

#gallery {
  background-color:#FFF;
  padding-top:3%;
  padding-bottom:2%;
}

#submit {
  background-color: #E9E6E3;
  padding-top:3%;
  padding-bottom:2%;
}

#footer {
  background-color: #69A6CF;
  height:25%;
}

.intro-text {
  padding: 25px 15px;
  text-align: center;
}

.lead {
  text-align:left;
}

.indented {
  text-indent: 2em;
}

.smaller-text {
  font-size:17px;
}

.navbar {
  background-color: rgba(0, 0, 0, 0.5);
  min-height:74px;
}

.navbar-brand {
  /*min-height:74px;*/
  line-height:45px;
  font-size:25px;
}

.navbar-inverse {
  border-color: transparent;
}

.navbar-inverse .navbar-brand {
  color:#FFFFFF;
}

.navbar-inverse .navbar-brand:hover,
.navbar-inverse .navbar-brand:focus {
  color: #999;
  background-color: transparent;
}

.navbar-nav {
  min-height:74px;
  line-height: 45px;
  float:right;
}

.navbar-nav>li>a {
  line-height:45px;
  font-size:17px;
  padding-left:30px;
}



.navbar-inverse .navbar-nav >li >a {
  color:#FFFFFF;
  float: right;
}

.navbar-inverse .navbar-nav >li >a:hover,
.navbar-inverse .navbar-nav >li >a:focus {
  color: #999;
  background-color: transparent;
}

.navbar-inverse .navbar-toggle {
  border-color:transparent;
  margin-top: 18px;
  margin-bottom: 18px;
}

hr {
  height:4px;
  width:70px;
  margin: 2.75em auto 3.25em;
  border:0 none;
  display:block;
}

hr.standard-hr{
  
  background-color:#69A6CF;
}

hr.project-hr {
  background-color:#464646;
}

img {
}

#footer-para {
    margin-top:5%;
}

.footer-text {
  color:#FFFFFF;
  margin-bottom:0px;
  font-size:14px;
  text-align: center;
}

.credit-text{
  color:#FFFFFF;
  margin-bottom:0px;
  font-size:14px;
  text-align: center;
}

.thumb{
    max-width:30.5%;
    margin:1%;
  }


/** RESPONSIVE **/

@media (min-width: 768px) {
  .container {
    width: 700px;
  }

  #logo {
    width:400px;
    margin-left:-153px;
    top:50%;
    margin-top:-18%;
  }

  ul{
    font-size: 17px;
  }

  p{
    font-size:21px;
  }
  .intro-text {
    padding: 35px 15px;
  }
  #footer {
    height:20%;
  }

  .footer-text,
  .credit-text {
    font-size:21px;
  }

  .thumb{
    width:30.5%;
    margin:1%;
  }

  #footer-para {
    margin-top:4%;
  }
}



@media (min-width: 992px) {
  .container {
    width: 800px;
  }

  .navbar-nav>li>a {
    font-size:20px;
  }

  #logo{
    width:400px;
    margin-left:-153px;
    top:50%;
    margin-top:-18%;
  }

  .thumb{
    width:145px;
    margin:3px;
  }

  #footer-para {
    margin-top:4%;
  }

}



@media (min-width: 1200px) {
  .container {
    width: 1024px;
  }

  .navbar-nav>li>a {
    font-size:20px;
  }

  #logo{
    width:490px;
    margin-left:-190px;
    top:50%;
    margin-top:-12%;
  }

  .thumb{
    width:190px;
    margin:3px;
  }

  #footer-para {
    margin-top:6%;
}

}

